image ajust and background color changed

--- a/HTML archives/Index.html
+++ b/HTML archives/Index.html
@@ -23,12 +23,10 @@
         </header>
         <section class="Main_sections">
             <div><img src="../images/Apolo.jpg" alt="Apolo 11 Image">Apolo Mission</div>
-                                        <span></span>
             <div><img src="../images/Gravity_Probe.jpg" alt="">Gravity Probe B</div>
-                                        <span></span>
             <div><img src="../images/James_Webb_Space_Telescope.jpg" alt="">James Webb Telescope</div>
         </section>
-        <footer>123, Main street</footer>
+        <footer>123, Main street Edwardsville IL. - 555-555 </footer>
     </body>
 
 </html>
