implemented mobile resolution, better descriptions and about page.

--- a/HTML archives/Index.html
+++ b/HTML archives/Index.html
@@ -17,16 +17,17 @@
                     <li><a href="Index.html">Home</a></li>
                     <li><a href="List.html">List</a></li>
                     <li><a href="Contacts.html">Contacts</a></li>
+                    <li><a href="About.html"></a>About</li>
                 </ul>
             </nav>
             <div class="main_title">Home</div>
         </header>
         <section class="Main_sections">
             <div><img src="../images/Apolo.jpg" alt="Apolo 11 Image">Apolo Mission</div>
-            <div><img src="../images/Gravity_Probe.jpg" alt="">Gravity Probe B</div>
-            <div><img src="../images/James_Webb_Space_Telescope.jpg" alt="">James Webb Telescope</div>
+            <div><img src="../images/Gravity_Probe.jpg" alt="A cool satelite image">Gravity Probe B</div>
+            <div><img src="../images/James_Webb_Space_Telescope.jpg" alt="A picture of a telescope">James Webb Telescope</div>
         </section>
-        <footer>123, Main street Edwardsville IL. - 555-555 </footer>
+        <footer>123, Main street Edwardsville IL. - 555-555 <br><br>| Remeber this is just a layout |<br><br></footer>
     </body>
 
 </html>
