--- a/HTML archives/Contacts.html
+++ b/HTML archives/Contacts.html
@@ -17,16 +17,17 @@
                     <li><a href="Index.html">Home</a></li>
                     <li><a href="List.html">List</a></li>
                     <li><a href="Contacts.html">Contacts</a></li>
+                    <li><a href="About.html"></a>About</li>
                 </ul>
             </nav>
             <div class="main_title">Contacts</div>
         </header>
         <section>
-            <div>Section A</div>
-            <div>Section B</div>
-            <div>Section C</div>
+            <div style="justify-content: center;
+            align-items: center; color: darkslategray; display: flex; margin-top: 60px;">
+            This is the contacts page, i dont have any contacts yet</div>
         </section>
-        <footer>123, Main street</footer>
+        <footer>123, Main street Edwardsville IL. - 555-555 <br><br>| Remeber this is just a layout |<br><br></footer>
     </body>
 
 </html>
